Streamline documentation.